--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <script src="js/task-3.js"></script>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1>Hello, my dear mentor!</h1>
   </body>
 </html>
